--- a/src/sections/our-team/components/teamCard.module.css
+++ b/src/sections/our-team/components/teamCard.module.css
@@ -157,5 +157,6 @@
 
   .bgEffect {
     width: 480px;
+    display: none;
   }
 }
