--- a/src/sections/our-team/styles.module.css
+++ b/src/sections/our-team/styles.module.css
@@ -28,6 +28,7 @@
   position: relative;
   background-color: #e9e7e9;
   z-index: 0;
+  overflow: hidden;
 }
 
 .headerWrapper {
